@@ -1,4 +1,12 @@
 (defn ver [] (-> "../ver/mulog.version" slurp .trim))
+(defn java-version
+  "It returns the current Java major version as a number"
+  []
+  (as->  (System/getProperty "java.specification.version") $
+    (str/split $ #"[^\d]")
+    (if (= "1" (first $)) (second $) (first $))
+    (Long/parseLong $)))
+
 (defproject com.brunobonacci/mulog-filesystem-metrics #=(ver)
   :description "A filesystem metrics sampler for μ/log."
 
@@ -14,7 +22,12 @@
 
   :global-vars {*warn-on-reflection* true}
 
-  :jvm-opts ["-server"]
+  :jvm-opts ~(if (>= (java-version) 9)
+               ;; required due to reflection used in
+               ;; `com.brunobonacci.mulog.publishers.filesystem-metrics/store-hacks`
+               (vector "--add-opens" "java.base/sun.nio.fs=ALL-UNNAMED" "-server")
+               (vector "-server"))
+
 
   :profiles {:dev {:dependencies [[midje "1.9.10"]
                                   [org.clojure/test.check "1.1.0"]
